# molignr

./: .gitignore  README.md  pyproject.toml
cIGNR/: data_.py  train_cIGNR.py  utils.py
cIGNR/_without_SIREN/: a100.py  data_.py  jobbb.sh  load_checkpoints.py  metrics.py  train.py  utils.py
cIGNR/_without_SIREN/models/: model.py
cIGNR/evaluation/: a100.py  activation_index.py  interpolate.py  load_checkpoints.py  metrics.py
cIGNR/models/: layers.py  model_cIGNR.py  siren_pytorch.py
implicit_graphon/IGNR/c-IGNR/: model_cIGNR_.py
molIGNR/: data_.py
molIGNR/_single_decoder/: train.py
molIGNR/_single_decoder/models/: layers.py  model.py
molIGNR/evaluation/: metrics.py
molIGNR/models/: model_cIGNR.py  siren_pytorch.py
molIGNR_prot/: environment.yml  load_checkpoints.py  train_IGNR.py  utils.py
molIGNR_prot/_single_decoder/: data_.py  load_checkpoints.py  load_checkpoints_siren.py  metrics.py  train.py  train_siren.py  utils.py
molIGNR_prot/_single_decoder/models/: model_siren.py
molIGNR_prot/models/: layers.py
molIGNR_smol/: data_loader.py  diffusion_distance.py  helpers.py  molecular_dataset.py  networks.py  pyproject.toml  siren_pytorch.py  smol_gabor.py  smol_gabor_recon_only.py  train.py  train_recon_eval.py  train_test.py
